# geoshift

./: CHANGELOG.md  README.md  RESULTS.md  pyproject.toml
bench/: __init__.py  evaluate.py  results.json  run_all.py
cognis_lookout/: __init__.py  cli.py  smalltarget.py  synth.py
docs/: COMPLIANCE.md  SOLIC_CA3_MAPPING.md
geoshift/: __init__.py  change.py  cli.py  geo.py  geofence.py  grid.py  patternoflife.py  report.py
tests/: test_lookout.py  test_smalltarget.py
