[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cognis-lookout"
version = "0.3.0"
description = "Geospatial change detection & pattern-of-life for counternarcotics — Cognis Lookout"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["geoint", "change-detection", "pattern-of-life", "geofence", "counternarcotics", "cognis"]
license = { text = "COCL-1.0" }
dependencies = []

[project.urls]
Homepage = "https://cognis.digital"

[project.scripts]
cognis-lookout = "cognis_lookout.cli:main"

[tool.setuptools]
packages = ["cognis_lookout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
