[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "geoshift"
version = "0.3.0"
description = "Geospatial change detection & pattern-of-life for counternarcotics — Geoshift"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["geoint", "change-detection", "pattern-of-life", "geofence", "counternarcotics", "cognis"]
license = { text = "COCL-1.0" }
dependencies = []

[project.urls]
Homepage = "https://cognis.digital"

[project.scripts]
geoshift = "geoshift.cli:main"

[tool.setuptools]
packages = ["geoshift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
